# MiniGit-A-Custom-Version-Control-System-project

./: MiniGit Project Report.docx  MiniGit_Project_Report.docx  README.md  branch.cpp  branch.h
mingit_project/mingit_project/: CMakeLists.txt  MiniGit_Report.markdown  README.md
mingit_project/mingit_project/docs/: DESIGN.md
mingit_project/mingit_project/include/: blob.h  branch.h  commit.h  minigit.h  utils.h
mingit_project/mingit_project/src/: blob.cpp  branch.cpp  commit.cpp  main.cpp  minigit.cpp  utils.cpp
